<resources>
    <string name="app_name">Playlist maker</string>
    <string name="yes_button">Да</string>
    <string name="no_button">Нет</string>
    <string name="search_but_text">Поиск</string>
    <string name="media_but_text">Медиатека</string>
    <string name="settings_but_text">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_text">Поделиться приложением</string>
    <string name="support_text">Написать в поддержку</string>
    <string name="agreement_text">Пользовательское соглашение</string>
    <string name="some_content_des">icon</string>

    <string name="course_website_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer</string>
    <string name="email_link">blackyblackmail@yandex.ru</string>
    <string name="email_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="reset_button">Обновить</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="network_issues">Проблемы со связью.\n\n Загрузка не удалась. Проверьте подключение к интернету</string>



    <string name="track_1_tr_name">Smells Like Teen Spirit</string>
    <string name="track_1_artist_name">Nirvana</string>
    <string name="track_1_tr_time">5:01</string>
    <string name="track_1_artwork_url">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>

    <string name="track_2_tr_name">Billie Jean</string>
    <string name="track_2_artist_name">Michael Jackson</string>
    <string name="track_2_tr_time">4:35</string>
    <string name="track_2_artwork_url">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>

    <string name="track_3_tr_name">Stayin\' Alive</string>
    <string name="track_3_artist_name">Bee Gees</string>
    <string name="track_3_tr_time">4:10</string>
    <string name="track_3_artwork_url">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>

    <string name="track_4_tr_name">Whole Lotta Love</string>
    <string name="track_4_artist_name">Led Zeppelin</string>
    <string name="track_4_tr_time">5:33</string>
    <string name="track_4_artwork_url">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>

    <string name="track_5_tr_name">Sweet Child O\'Mine</string>
    <string name="track_5_artist_name">Guns N\' Roses</string>
    <string name="track_5_tr_time">5:03</string>
    <string name="track_5_artwork_url">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>


</resources>